# uw-26sp-csep546

./: README.md  macro.tex
hw0/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  chat_conversation_export_A1.md  conversation_export_A3.md  covariance_matrix_conversation_A2.md  hw0.tex
hw0/hw0-A/: .flake8  pyproject.toml  tasks.py
hw0/hw0-A/homeworks/vanilla_vs_numpy/: vanilla_vs_numpy.py
hw1/: HW1. A1.md  HW1.A2.md  hw1.A3.md  hw1.A4.md  hw1.A5.md  hw1.tex
hw1/hw1-A/: README.md  tasks.py
hw1/hw1-A/homeworks/poly_regression/: plot_polyreg_univariate.py  polyreg.py
hw1/hw1-A/homeworks/ridge_regression_mnist/: ridge_regression.py
