[project]
name = "csep546"
version = "0.0.1"
description = "CSEP 546 Utilities"
authors = [
    {name = "CSEP 546 Staff"}
]
requires-python = ">=3.9,<3.10"
dependencies = [
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "numpy==1.21.0",
    "pandas>=1.3.0",
    "invoke",
    "tqdm",
    "torch>=2.0.0",
    "torchvision",
    "gradescope-utils==0.4.0",
    "wget==3.2",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
    "numpy",
    "sklearn.*",
    "matplotlib.*",
    "tqdm",
    "torchvision.*",
    "losses.*",
    "layers.*",
    "optimizers.*",
    "train.*"
]
ignore_missing_imports = true
